force-app/main/default/objects/Service_Request__c/fields/Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Request_Number__c</fullName>
    <displayFormat>SR-{0000}</displayFormat>
    <label>Request Number</label>
    <type>AutoNumber</type>
</CustomField>