force-app/main/default/objects/Service_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Access Request</fullName>
            </value>
            <value>
                <fullName>Email Issue</fullName>
            </value>
            <value>
                <fullName>ID Card</fullName>
            </value>
            <value>
                <fullName>Laptop Issue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Software Installation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>